tests/baselines/reference/exportAssignmentImportMergeNoCrash.errors.txt
tests/cases/compiler/user.ts(1,8): error TS2395: Individual declarations in merged declaration 'Obj' must be all exported or all local.
tests/cases/compiler/user.ts(1,8): error TS2440: Import declaration conflicts with local declaration of 'Obj'.
tests/cases/compiler/user.ts(3,14): error TS2395: Individual declarations in merged declaration 'Obj' must be all exported or all local.
tests/cases/compiler/user.ts(3,25): error TS2448: Block-scoped variable 'Obj' used before its declaration.


==== tests/cases/compiler/assignment.ts (0 errors) ====
    export default {
        foo: 12
    };
    
==== tests/cases/compiler/user.ts (4 errors) ====
    import Obj from "./assignment";
           ~~~
!!! error TS2395: Individual declarations in merged declaration 'Obj' must be all exported or all local.
           ~~~
!!! error TS2440: Import declaration conflicts with local declaration of 'Obj'.
    
    export const Obj = void Obj;
                 ~~~
!!! error TS2395: Individual declarations in merged declaration 'Obj' must be all exported or all local.
                            ~~~
!!! error TS2448: Block-scoped variable 'Obj' used before its declaration.
!!! related TS2728 tests/cases/compiler/user.ts:3:14: 'Obj' is declared here.
    